# asset-generator

./: AUTHORS  COPYING.md  ChangeLog  INSTALL.md  Makefile  Makefile.am  Makefile.in  NEWS.md  README.md  autogen.sh  config.h  config.status  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/.deps/: __top_builddir__logogenerator-colored_triangle.Po  __top_builddir__logogenerator-join_triangles.Po  __top_builddir__logogenerator-main.Po  __top_builddir__logogenerator-options.Po  __top_builddir__logogenerator-outlined_triangle.Po  colored_triangle.Po  join_triangles.Po  main.Po  options.Po  outlined_triangle.Po
src/API/: colored_triangle.c  include.h  join_icon_chat.c  join_triangles.c  outlined_triangle.c  polygon.c  rhombus.c
src/API/JoinPieces/: JoinIconChat.c  JoinTriangles.c
src/API/Shapes/: ColoredTriangle.c  OutlinedTriangle.c  Polygon.c  Rhombus.c
src/API/UI/: MainWindow.ui
src/Assets/: ChatIcon.c  Logo.c  Main.c  Makefile.am  Makefile.in  main.c  options.c
src/Icons/: Makefile.am  Makefile.in  main.c
src/api/: colored_triangle.c  include.h  join_icon_chat.c  join_shapes.c  join_triangles.c  main_window.ui  outlined_triangle.c
src/api/.deps/: __top_builddir__icons-join_icon_chat.Po  __top_builddir__icons-polygon.Po  __top_builddir__icons-rhombus.Po  __top_builddir__logo-colored_triangle.Po  __top_builddir__logo-join_triangles.Po  __top_builddir__logo-outlined_triangle.Po  __top_builddir__logogenerator-colored_triangle.Po  __top_builddir__logogenerator-join_triangles.Po  __top_builddir__logogenerator-outlined_triangle.Po
src/icons/: Makefile  Makefile.am  Makefile.in  main.c
src/icons/.deps/: __top_builddir__icons-main.Po  __top_builddir__logogenerator-main.Po
src/includes/: include.h
src/logo/: Makefile  Makefile.am  Makefile.in  main.c  options.c
src/logo/.deps/: __top_builddir__logo-main.Po  __top_builddir__logo-options.Po  __top_builddir__logogenerator-colored_triangle.Po  __top_builddir__logogenerator-join_triangles.Po  __top_builddir__logogenerator-main.Po  __top_builddir__logogenerator-options.Po  __top_builddir__logogenerator-outlined_triangle.Po
