# Started from the bottom now we're here
# Started from the bottom now my whole team fucking here
# Started from the bottom now we're here
# Started from the bottom now the whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now my whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now the whole team fucking here

bin_PROGRAMS = $(top_builddir)/bin/Assets
__top_builddir__bin_Assets_SOURCES = Main.c Logo.c ../checkout/jhbuild/API/Shapes/ColoredTriangle.c ../checkout/jhbuild/API/JoinPieces/JoinTriangles.c ../checkout/jhbuild/API/Shapes/OutlinedTriangle.c ../checkout/jhbuild/API/include.h ../checkout/jhbuild/API/UI/MainWindow.ui ChatIcon.c ../checkout/jhbuild/API/JoinPieces/JoinIconChat.c ../checkout/jhbuild/API/Shapes/Rhombus.c ../checkout/jhbuild/API/Shapes/Polygon.c ../checkout/jhbuild/API/UI/about.png ../checkout/jhbuild/API/UI/rsz_1rsz_1chat.png ../checkout/jhbuild/API/UI/rsz_1rsz_octocat.png ../checkout/jhbuild/API/UI/GitHub-Mark-Light-64px.png ../checkout/jhbuild/API/UI/GitHub-Mark-64px.png ../checkout/jhbuild/API/UI/rsz_1rsz_image.jpg

__top_builddir__bin_Assets_CFLAGS = `pkg-config --cflags gtk+-3.0 cairo` -export-dynamic
__top_builddir__bin_Assets_LDFLAGS = `pkg-config --libs gtk+-3.0 cairo` 




