# Started from the bottom now we're here
# Started from the bottom now my whole team fucking here
# Started from the bottom now we're here
# Started from the bottom now the whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now my whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now the whole team fucking here

bin_PROGRAMS = $(top_builddir)/bin/Assets
__top_builddir__bin_Assets_SOURCES = Main.c Logo.c ../jhbuild/checkout/API/Shapes/ColoredTriangle.c ../jhbuild/checkout/API/JoinPieces/JoinTriangles.c ../jhbuild/checkout/API/Shapes/OutlinedTriangle.c ../jhbuild/checkout/API/include.h ../jhbuild/checkout/API/UI/MainWindow.ui ChatIcon.c ../jhbuild/checkout/API/JoinPieces/JoinIconChat.c ../jhbuild/checkout/API/Shapes/Rhombus.c ../jhbuild/checkout/API/Shapes/Polygon.c ../jhbuild/checkout/API/UI/about.png ../jhbuild/checkout/API/UI/rsz_1rsz_1chat.png ../jhbuild/checkout/API/UI/rsz_1rsz_octocat.png ../jhbuild/checkout/API/UI/GitHub-Mark-Light-64px.png ../jhbuild/checkout/API/UI/GitHub-Mark-64px.png ../jhbuild/checkout/API/UI/rsz_1rsz_image.jpg

__top_builddir__bin_Assets_CFLAGS = `pkg-config --cflags gtk+-3.0 cairo` -export-dynamic
__top_builddir__bin_Assets_LDFLAGS = `pkg-config --libs gtk+-3.0 cairo` 




