# Started from the bottom now we're here
# Started from the bottom now my whole team fucking here
# Started from the bottom now we're here
# Started from the bottom now the whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now my whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now the whole team fucking here

bin_PROGRAMS = $(top_builddir)/bin/Icons
__top_builddir__bin_Icons_SOURCES = main.c ../api/join_icon_chat.c ../api/rhombus.c ../api/polygon.c ../api/include.h 
__top_builddir__bin_Icons_CFLAGS = `pkg-config --cflags cairo` 
__top_builddir__bin_Icons_LDFLAGS = `pkg-config --libs cairo` 


