# Started from the bottom now we're here
# Started from the bottom now my whole team fucking here
# Started from the bottom now we're here
# Started from the bottom now the whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now my whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now the whole team fucking here

bin_PROGRAMS = $(top_builddir)/bin/Icons
__top_builddir__bin_Icons_SOURCES = main.c ../API/join_icon_chat.c ../API/rhombus.c ../API/polygon.c ../API/include.h 
__top_builddir__bin_Icons_CFLAGS = `pkg-config --cflags cairo` 
__top_builddir__bin_Icons_LDFLAGS = `pkg-config --libs cairo` 


