# Started from the bottom now we're here
# Started from the bottom now my whole team fucking here
# Started from the bottom now we're here
# Started from the bottom now the whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now my whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now the whole team fucking here

bin_PROGRAMS = $(top_builddir)/icons
__top_builddir__icons_SOURCES = main.c 
__top_builddir__icons_CFLAGS = `pkg-config --cflags gtk+-3.0 cairo` 
__top_builddir__icons_LDFLAGS = `pkg-config --libs gtk+-3.0 cairo` 


