# Started from the bottom now we're here
# Started from the bottom now my whole team fucking here
# Started from the bottom now we're here
# Started from the bottom now the whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now my whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now the whole team fucking here

bin_PROGRAMS = $(top_builddir)/icons
__top_builddir__icons_SOURCES = main.c ../api/join_shapes.c ../api/rhombus.c ../api/polygon.c ../api/include.h 
__top_builddir__icons_CFLAGS = `pkg-config --cflags cairo` 
__top_builddir__icons_LDFLAGS = `pkg-config --libs cairo` 


