# Started from the bottom now we're here
# Started from the bottom now my whole team fucking here
# Started from the bottom now we're here
# Started from the bottom now the whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now my whole team here, nigga
# Started from the bottom now we're here
# Started from the bottom now the whole team fucking here

bin_PROGRAMS = $(top_builddir)/logo
__top_builddir__logo_SOURCES = main.c options.c ../api/colored_triangle.c ../api/join_triangles.c ../api/outlined_triangle.c include.h
__top_builddir__logo_CFLAGS = `pkg-config --cflags gtk+-3.0 cairo` 
__top_builddir__logo_LDFLAGS = `pkg-config --libs gtk+-3.0 cairo` 


